--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,8 +192,10 @@ target_link_libraries(communication conductrix ${catkin_LIBRARIES} ${LIBSERIAL_L
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
+
+
 # catkin_install_python(PROGRAMS
-#   scripts/my_python_script
+#   scripts/communication.py
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
 
